fix(ffm): five of nine MemorySegment.set carriers had no implementation
`java.lang.foreign.MemorySegment` declares nine get/set pairs and all eighteen
are `public abstract`, so a descriptor nobody registers is not a slow path -- it
is `AbstractMethodError: … has no Code attribute` thrown at the interface method
itself.

panama.rs enumerates all nine covariant `get` descriptors and only the ERASED
`(ValueLayout;JLjava/lang/Object;)V` for `set`, which real bytecode never emits;
phases_late/foreign_ffm.rs separately covers Byte/Short/Int/Long for both. Four
of the nine therefore worked and the other five raised. Measured on the pre-fix
binary with the new probes/FfmSegmentAccessProbe, identical in --real-jdk and
--jdk-only: Boolean, Char, Float, Double and Address all fail, and the page that
started this named only OfDouble because that is the one a probe happened to
reach.

The implementation was never the problem: setAtIndex(JAVA_DOUBLE, 2, 2.25) works
today and round-trips, because IT is registered on a descriptor real bytecode
does emit and lands in the same pe_segment_set_impl. So the fix is the missing
registration loop, written directly under the `get` one and in the same order --
an asymmetry between those two lists IS this defect, and it is only visible when
they are read together.

Two conversions the probe caught while it was there, both measured against
Temurin 25.0.3:

* get(JAVA_CHAR) sign-extended. A char is UNSIGNED, so 0xFFFE read back as -2
  where HotSpot answers 65534.
* get(ADDRESS) returned Value::Long where the descriptor's return type is
  Ljava/lang/foreign/MemorySegment;. The L-descriptor coercion turned that into
  NULL, so the accessor answered null and the caller NPE'd on .address(). It now
  builds the zero-length segment the JDK specifies -- size 0, so a caller must
  reinterpret before dereferencing, which is the property that makes an address
  read safe at all. set(ADDRESS, off, seg) takes the segment and stores its
  address; without 